maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:3: error: ';' expected but ',' found.
 var (x, y):(Int, Int) = 0, 0
                          ^JediEscaper:8: error: ';' expected but '=' found.
      	(x, y) = i,j
               ^